--- a/aplicationdj.html
+++ b/aplicationdj.html
@@ -225,9 +225,9 @@ body {
   text-align:center;
   top:50%;
   transform:translate(-50%, -50%);
-  display: none;
-}
-#step8 {
+  display:none;
+
+}#step8 {
   background-color:rgba(255,255,255,.8);
   border-radius:.25em;
   box-shadow:0 0 .25em rgba(0,0,0,.25);
