--- a/etapas.html
+++ b/etapas.html
@@ -110,7 +110,7 @@ body {
 
 .bg {
   animation:slide 9s ease-in-out infinite alternate;
-  background-image: linear-gradient(-60deg, #eea2e2 50%, rgb(241, 232, 239) 50%);
+  background-image: linear-gradient(-60deg, #e08319 50%, rgb(241, 232, 239) 50%);
   bottom:0;
   left:-50%;
   opacity:.5;
@@ -363,13 +363,14 @@ body, h1, h2, p, button {
     <div class="content" id="step1">
           <h4 class="">Bienvenido a Diana Dussan Clínica Avanzada</h4>
       
-      <button class="btn-hide" id="btn-step1" >Etapa 1
+      <button class="btn-hide" id="btn-step1" >Etapa 1: $75.000
+
       </button>
-      <button class="btn-hide" id="btn-step1" >Etapa 2
+      <button class="btn-hide" id="btn-step1" >Etapa 2: $100.000
     </button>
-    <button class="btn-hide" id="btn-step1" >Etapa 3
+    <button class="btn-hide" id="btn-step1" >Etapa 3: $150.000
     </button>
-    <button class="btn-hide" id="btn-step1" >Etapa 4
+    <button class="btn-hide" id="btn-step1" >Etapa 4: $250.000
     </button>
   
     </div>
