--- a/etapas.html
+++ b/etapas.html
@@ -23,7 +23,9 @@ width: max-content;
   position: relative;
   text-decoration: none;
   display:inline-block;
-  background-color: #6098FF;
+  background: linear-gradient(45deg, #FFD345,  #F9F2A2
+
+  , #AB772B  );
   font-family: 'bebas neue';
   font-size:xx-large;
   
@@ -110,7 +112,8 @@ body {
 
 .bg {
   animation:slide 9s ease-in-out infinite alternate;
-  background-image: linear-gradient(-60deg, #e08319 50%, rgb(241, 232, 239) 50%);
+  background-image: linear-gradient(-60deg, #FFD345
+  50%, rgb(20, 20, 20) 50%);
   bottom:0;
   left:-50%;
   opacity:.5;
@@ -130,7 +133,7 @@ body {
 }
 
 .content {
-  background-color:rgba(255,255,255,.8);
+  background-color:rgba(37, 36, 36, 0.8);
   border-radius:.25em;
   box-shadow:0 0 .25em rgba(0,0,0,.25);
   box-sizing:border-box;
@@ -363,7 +366,7 @@ body, h1, h2, p, button {
     <div class="content" id="step1">
           <h4 class="">Bienvenido a Diana Dussan Clínica Avanzada</h4>
       
-      <button class="btn-hide" id="btn-step1" >Etapa 1: $75.000
+      <button class="btn-hide" id="btn-step1" >Etapa 1:$75.000
 
       </button>
       <button class="btn-hide" id="btn-step1" >Etapa 2: $100.000
