--- a/etapas.html
+++ b/etapas.html
@@ -401,17 +401,31 @@ body, h1, h2, p, button {
   </div>
   <div class="content" id="step3">
     <div class="toxiglam"> 
-      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe7l-3xgVEX69TphNfn24Zw6cMPr3m7wUutn1F8t_2K7yQbpA/viewform?embedded=true" width="640" height="1606" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-        
+      <div class="formmailchimp" id="form">
+        <div class="mcnTextContent" data-dojo-attach-point="formContentContainer" style="display: flex;padding-top: 10px;max-width: 500px;max-height: 800px; -webkit-box-sizing: border-box;-moz-box-sizing: border-box;word-break: break-word;flex-flow: column;color: #000000;font-family: Baskerville;font-size: 22px;line-height: 150%;text-align: left;box-sizing: border-box !important;">
+          <!-- Form Fields -->
+          <div class="content__formFields" data-dojo-attach-point="formFieldsContainer" style="font-size: small;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
+      <span style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
+      <div id="dijit__TemplatedMixin_0" widgetid="dijit__TemplatedMixin_0"><div class="webContent" id="SignupForm_0" widgetid="SignupForm_0"><div class="flash-block" data-dojo-attach-point="formResponseMessages"></div><div class="webContent__content" data-dojo-attach-point="formContentContainer"><form action="//mc.us10.list-manage.com/subscribe/landing-page?u=a595579e532eb32fa59c93cde&amp;id=80c675be8d&amp;f_id=005346e4f0" accept-charset="UTF-8" method="post" enctype="multipart/form-data" data-dojo-attach-point="formNode" novalidate=""><div class="content__formFields" data-dojo-attach-point="formFieldsContainer"><div class="field-wrapper" id="uniqName_8_0" widgetid="uniqName_8_0"><label for="mc-EMAIL">Email Address</label><input type="text" name="EMAIL" value="" id="mc-EMAIL" class="invalid"><div class="invalid-error" style="display: block;">This field is required.</div></div><div class="field-wrapper" id="uniqName_8_1" widgetid="uniqName_8_1"><label for="mc-FNAME">First Name</label><input type="text" name="FNAME" value="" id="mc-FNAME"><div class="invalid-error"></div></div><div class="field-wrapper" id="uniqName_8_2" widgetid="uniqName_8_2"><label for="mc-LNAME">Last Name</label><input type="text" name="LNAME" value="" id="mc-LNAME"><div class="invalid-error"></div></div><div class="field-wrapper" id="uniqName_8_3" widgetid="uniqName_8_3"><label for="mc-PHONE">Phone Number</label><input type="text" name="PHONE" value="" id="mc-PHONE"><div class="invalid-error"></div></div><div class="field-wrapper birthday" id="uniqName_8_4" widgetid="uniqName_8_4"><label for="mc-BIRTHDAY-month">Birthday</label><div data-dojo-attach-point="inputsContainer"><input class="birthday-month" type="text" placeholder="MM" maxlength="2" name="BIRTHDAY[month]" value="" id="mc-BIRTHDAY-month" data-dojo-attach-point="monthNode"><input class="birthday-day" type="text" placeholder="DD" maxlength="2" name="BIRTHDAY[day]" value="" id="mc-BIRTHDAY-day" data-dojo-attach-point="dayNode"></div><div class="invalid-error"></div></div><div class="field-wrapper radio-group" id="uniqName_8_5" widgetid="uniqName_8_5"><label for="mc-group[496990]">Zona a tratar con Toxina botulínica</label><ul class="radioCheckboxContainer" data-dojo-attach-point="choicesContainer"><li><label for="mc-group[496990]-496990-0" class="checkbox"><input id="mc-group[496990]-496990-0" type="checkbox" value="256" name="group[496990][256]">Frente<div class="checkbox-bg"></div><div class="hover-focus-background"></div></label><div class="flex-spacer"></div></li><li><label for="mc-group[496990]-496990-1" class="checkbox"><input id="mc-group[496990]-496990-1" type="checkbox" value="512" name="group[496990][512]">Entrecejo<div class="checkbox-bg"></div><div class="hover-focus-background"></div></label><div class="flex-spacer"></div></li><li><label for="mc-group[496990]-496990-2" class="checkbox"><input id="mc-group[496990]-496990-2" type="checkbox" value="1024" name="group[496990][1024]">Periorbicular<div class="checkbox-bg"></div><div class="hover-focus-background"></div></label><div class="flex-spacer"></div></li><li><label for="mc-group[496990]-496990-3" class="checkbox"><input id="mc-group[496990]-496990-3" type="checkbox" value="2048" name="group[496990][2048]">TrapTox<div class="checkbox-bg"></div><div class="hover-focus-background"></div></label><div class="flex-spacer"></div></li><li><label for="mc-group[496990]-496990-4" class="checkbox"><input id="mc-group[496990]-496990-4" type="checkbox" value="4096" name="group[496990][4096]">Mentón<div class="checkbox-bg"></div><div class="hover-focus-background"></div></label><div class="flex-spacer"></div></li><li><label for="mc-group[496990]-496990-5" class="checkbox"><input id="mc-group[496990]-496990-5" type="checkbox" value="8192" name="group[496990][8192]">Cuello<div class="checkbox-bg"></div><div class="hover-focus-background"></div></label><div class="flex-spacer"></div></li></ul><div class="invalid-error"></div></div><div class="field-wrapper radio-group" id="uniqName_8_6" widgetid="uniqName_8_6"><label for="mc-group[496989]">Autorizo tratamiento de datos personales</label><ul class="radioCheckboxContainer" data-dojo-attach-point="choicesContainer"><li><label for="mc-group[496989]-496989-0" class="checkbox"><input id="mc-group[496989]-496989-0" type="checkbox" value="64" name="group[496989][64]">Si<div class="checkbox-bg"></div><div class="hover-focus-background"></div></label><div class="flex-spacer"></div></li><li><label for="mc-group[496989]-496989-1" class="checkbox"><input id="mc-group[496989]-496989-1" type="checkbox" value="128" name="group[496989][128]">No<div class="checkbox-bg"></div><div class="hover-focus-background"></div></label><div class="flex-spacer"></div></li></ul><div class="invalid-error"></div></div><div style="position:absolute;left:-5000px;" aria-hidden="true"><input type="text" name="b_a595579e532eb32fa59c93cde_906156" tabindex="-1" value=""></div><input type="hidden" name="ht" value="7ee3d955e21d42719c8b8d532bf8c594c2d88cdb:MTcyMjAyMjU1MC40OTY0"></div><div class="content__button"><input class="button" type="submit" value="Reservar" data-dojo-attach-point="submitButton"></div></form></div></div></div>
+      </span>
+      </div>
 <button class="btn-hide" id="btn-step3" >segunda
 
 </button>
+
+ 
+
+</div>
+
+
+ </div>   
 
 
 </div>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <script src="aplicationdj.js"></script>
         
+
     </footer>
 </body>
 </html>
